// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credits dark theme 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "System",
          "fontWeight": "400",
        },
        {
          "textAlign": "left",
        },
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(255, 255, 255, 0.87)",
            "fontFamily": "System",
            "fontWeight": "400",
            "writingDirection": "ltr",
          },
          [
            {
              "fontSize": 14,
              "letterSpacing": 0.25,
              "lineHeight": 20,
              "marginVertical": 2,
            },
            {
              "paddingBottom": 10,
              "textAlign": "center",
            },
          ],
        ],
      ]
    }
  >
    Questions by The Open Trivia Database
  </Text>
  <Text
    onPress={[Function]}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "System",
          "fontWeight": "400",
        },
        {
          "textAlign": "left",
        },
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(255, 255, 255, 0.87)",
            "fontFamily": "System",
            "fontWeight": "400",
            "writingDirection": "ltr",
          },
          [
            {
              "fontSize": 14,
              "letterSpacing": 0.25,
              "lineHeight": 20,
              "marginVertical": 2,
            },
            [
              {
                "paddingBottom": 10,
                "textAlign": "center",
              },
              {
                "color": "#fff",
                "textDecorationLine": "underline",
              },
            ],
          ],
        ],
      ]
    }
  >
    Game by www.LouieChristie.com
  </Text>
</View>
`;

exports[`Credits light theme 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#000",
          "fontFamily": "System",
          "fontWeight": "400",
        },
        {
          "textAlign": "left",
        },
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "System",
            "fontWeight": "400",
            "writingDirection": "ltr",
          },
          [
            {
              "fontSize": 14,
              "letterSpacing": 0.25,
              "lineHeight": 20,
              "marginVertical": 2,
            },
            {
              "paddingBottom": 10,
              "textAlign": "center",
            },
          ],
        ],
      ]
    }
  >
    Questions by The Open Trivia Database
  </Text>
  <Text
    onPress={[Function]}
    style={
      [
        {
          "color": "#000",
          "fontFamily": "System",
          "fontWeight": "400",
        },
        {
          "textAlign": "left",
        },
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "System",
            "fontWeight": "400",
            "writingDirection": "ltr",
          },
          [
            {
              "fontSize": 14,
              "letterSpacing": 0.25,
              "lineHeight": 20,
              "marginVertical": 2,
            },
            [
              {
                "paddingBottom": 10,
                "textAlign": "center",
              },
              {
                "color": "#0051E7",
                "textDecorationLine": "underline",
              },
            ],
          ],
        ],
      ]
    }
  >
    Game by www.LouieChristie.com
  </Text>
</View>
`;
